[tool.poetry]
name = "ihb-sim"
version = "0.1.0"
description = "inhibition-simulator"
authors = ["sertralineSH@outlook.com"]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
